-- CRUISE_LINE TABLE
CREATE TABLE CRUISE_LINE (
 COMPANY_NAME VARCHAR(50) NOT NULL,
 LOGO VARCHAR(100),
 FLEET_SIZE INT,
 REVIEW_ARTICLE VARCHAR(200),
 RATING NUMERIC(3,1),
 ENTERTAINMENT VARCHAR(200),
 IMAGES VARCHAR(200),
 PRIMARY KEY (COMPANY_NAME)
);
GO

-- CRUISE_SHIP TABLE
CREATE TABLE CRUISE_SHIP (
 SHIP_NAME VARCHAR(50) NOT NULL,
 YEAR_LAUNCHED INT,
 CREW_COUNT INT,
 CAPACITY INT,
 PASSENGER_CREW_RATIO NUMERIC(5,2),
 ITINERARY VARCHAR(200),
 SHIP_RATING NUMERIC(3,1),
 AMENITIES VARCHAR(200),
 SHORE_EXCURSIONS INT,
 SHIP_IMAGES VARCHAR(200),
 COMPANY_NAME VARCHAR(50) NOT NULL,
 PRIMARY KEY (SHIP_NAME),
 FOREIGN KEY (COMPANY_NAME) REFERENCES CRUISE_LINE(COMPANY_NAME)
 ON UPDATE CASCADE
 ON DELETE CASCADE
);
GO

-- CRUISE_TRIP TABLE
CREATE TABLE CRUISE_TRIP (
 TRIP_ID INT NOT NULL,
 TRIP_NAME VARCHAR(100),
 DEPARTURE_PORT VARCHAR(100),
 DESTINATIONS VARCHAR(200),
 DURATION INT,
 PRICE NUMERIC(8,2),
 ORIENTATION VARCHAR(50),
 TRIP_IMAGES VARCHAR(200),
 SHIP_NAME VARCHAR(50) NOT NULL,
 COMPANY_NAME VARCHAR(50) NOT NULL,
 PRIMARY KEY (TRIP_ID),
 FOREIGN KEY (SHIP_NAME) REFERENCES CRUISE_SHIP(SHIP_NAME),
 FOREIGN KEY (COMPANY_NAME) REFERENCES CRUISE_LINE(COMPANY_NAME)
 ON UPDATE NO ACTION
 ON DELETE CASCADE
);
GO

-- DESTINATION TABLE
CREATE TABLE DESTINATION (
 NAME VARCHAR(100) NOT NULL,
 DESTINATION_SUMMARY VARCHAR(300),
 DESTINATION_TYPE VARCHAR(50),
 IMAGES VARCHAR(200),
 PRIMARY KEY (NAME)
);
GO

-- PORT TABLE
CREATE TABLE PORT (
 PORT_ID INT NOT NULL,
 PORT_NAME VARCHAR(100),
 DEPARTURE_LOCATION VARCHAR(100),
 PORT_IMAGES VARCHAR(200),
 TRIP_ID INT NOT NULL,
 NAME VARCHAR(100) NOT NULL,
 PRIMARY KEY (PORT_ID),
 FOREIGN KEY (TRIP_ID) REFERENCES CRUISE_TRIP(TRIP_ID),
 FOREIGN KEY (NAME) REFERENCES DESTINATION(NAME)
 ON UPDATE CASCADE
 ON DELETE CASCADE
);
GO

-- CRUISE_DEAL TABLE
CREATE TABLE CRUISE_DEAL (
 DEAL_ID INT NOT NULL,
 PRICE NUMERIC(8,2),
 DURATION INT,
 IMAGE VARCHAR(200),
 TRAVEL_AGENCY_LINK VARCHAR(200),
 COMPANY_NAME VARCHAR(50) NOT NULL,
 TRIP_ID INT NOT NULL,
 PRIMARY KEY (DEAL_ID),
 FOREIGN KEY (COMPANY_NAME) REFERENCES CRUISE_LINE(COMPANY_NAME),
 FOREIGN KEY (TRIP_ID) REFERENCES CRUISE_TRIP(TRIP_ID)
 ON UPDATE CASCADE
 ON DELETE CASCADE
);
GO

-- USER_ACCOUNT TABLE
CREATE TABLE USER_ACCOUNT (
 USER_ID INT NOT NULL,
 USERNAME VARCHAR(50) UNIQUE NOT NULL,
 DATE_JOINED DATE,
 POST_COUNT INT,
 BADGES VARCHAR(100),
 PASSWORD VARCHAR(100) NOT NULL,
 PRIMARY KEY (USER_ID)
);
GO

-- FORUM TABLE
CREATE TABLE FORUM (
 FORUM_ID INT NOT NULL,
 USER_ID INT NOT NULL,
 FORUM_TITLE VARCHAR(100),
 CATEGORY VARCHAR(50),
 TIME_STAMP DATETIME,
 PRIMARY KEY (FORUM_ID),
 FOREIGN KEY (USER_ID) REFERENCES USER_ACCOUNT(USER_ID)
 ON UPDATE CASCADE
 ON DELETE CASCADE
);
GO

-- COMMUNITY_REVIEW TABLE
CREATE TABLE COMMUNITY_REVIEW (
 REVIEW_ID INT NOT NULL,
 RATING NUMERIC(3,1),
 TITLE VARCHAR(100),
 DATE DATE,
 PICTURE VARCHAR(200),
 USER_ID INT NOT NULL,
 SHIP_NAME VARCHAR(50) NOT NULL,
 COMPANY_NAME VARCHAR(50) NOT NULL,
 PRIMARY KEY (REVIEW_ID),
 FOREIGN KEY (USER_ID) REFERENCES USER_ACCOUNT(USER_ID),
 FOREIGN KEY (SHIP_NAME) REFERENCES CRUISE_SHIP(SHIP_NAME),
 FOREIGN KEY (COMPANY_NAME) REFERENCES CRUISE_LINE(COMPANY_NAME)
 ON UPDATE NO ACTION
 ON DELETE CASCADE
);
GO

-- ADVICE TABLE
CREATE TABLE ADVICE (
 ADVICE_ID INT NOT NULL,
 CRUISE_TIPS VARCHAR(200),
 CRUISE_NEWS VARCHAR(200),
 REVIEW_ID INT NOT NULL,
 PRIMARY KEY (ADVICE_ID),
 FOREIGN KEY (REVIEW_ID) REFERENCES COMMUNITY_REVIEW(REVIEW_ID)
 ON UPDATE NO ACTION
 ON DELETE CASCADE
);
GO

-- CRUISE_TRIP_STYLE TABLE
CREATE TABLE CRUISE_TRIP_STYLE (
 STYLE VARCHAR(50),
 TRIP_ID INT NOT NULL,
 PRIMARY KEY (STYLE, TRIP_ID),
 FOREIGN KEY (TRIP_ID) REFERENCES CRUISE_TRIP(TRIP_ID)
 ON UPDATE CASCADE
 ON DELETE CASCADE
);
GO

-- CRUISE_ITINERARY TABLE
CREATE TABLE CRUISE_ITINERARY (
 ITINERARY_ID INT NOT NULL,
 TRIP_ID INT NOT NULL,
 MAP VARCHAR(200),
 PORT VARCHAR(100),
 TOTALDAYS INT,
 PRIMARY KEY (ITINERARY_ID),
 FOREIGN KEY (TRIP_ID) REFERENCES CRUISE_TRIP(TRIP_ID)
 ON UPDATE CASCADE
 ON DELETE CASCADE
);
GO

-- VISITS TABLE
CREATE TABLE VISITS (
 ITINERARY_ID INT NOT NULL,
 TRIP_ID INT NOT NULL,
 NAME VARCHAR(100) NOT NULL,
 PRIMARY KEY (ITINERARY_ID, TRIP_ID, NAME),
 FOREIGN KEY (ITINERARY_ID) REFERENCES CRUISE_ITINERARY(ITINERARY_ID),
 FOREIGN KEY (TRIP_ID) REFERENCES CRUISE_TRIP(TRIP_ID),
 FOREIGN KEY (NAME) REFERENCES DESTINATION(NAME)
 ON UPDATE CASCADE
 ON DELETE CASCADE
);
GO

-- CRUISE_SHIP_CABIN TABLE
CREATE TABLE CRUISE_SHIP_CABIN (
 CABIN INT NOT NULL,
 SHIP_NAME VARCHAR(50) NOT NULL,
 PRIMARY KEY (CABIN),
 FOREIGN KEY (SHIP_NAME) REFERENCES CRUISE_SHIP(SHIP_NAME)
 ON UPDATE NO ACTION
 ON DELETE CASCADE
);
GO

-- CRUISE_TRIP_EXCURSIONS TABLE
CREATE TABLE CRUISE_TRIP_EXCURSIONS (
 EXCURSIONS VARCHAR(100),
 TRIP_ID INT NOT NULL,
 PRIMARY KEY (EXCURSIONS),
 FOREIGN KEY (TRIP_ID) REFERENCES CRUISE_TRIP(TRIP_ID)
 ON UPDATE NO ACTION
 ON DELETE CASCADE
);
GO

-- APPLIES_TO TABLE
CREATE TABLE APPLIES_TO (
 DEAL_ID INT NOT NULL,
 ITINERARY_ID INT NOT NULL,
 TRIP_ID INT NOT NULL,
 PRIMARY KEY (DEAL_ID, ITINERARY_ID, TRIP_ID),
 FOREIGN KEY (DEAL_ID) REFERENCES CRUISE_DEAL(DEAL_ID),
 FOREIGN KEY (ITINERARY_ID) REFERENCES CRUISE_ITINERARY(ITINERARY_ID),
 FOREIGN KEY (TRIP_ID) REFERENCES CRUISE_TRIP(TRIP_ID)
 ON UPDATE CASCADE
 ON DELETE CASCADE
);
GO

-- DISCUSSES TABLE
CREATE TABLE DISCUSSES (
 FORUM_ID INT NOT NULL,
 USER_ID INT NOT NULL,
 REVIEW_ID INT NOT NULL,
 PRIMARY KEY (FORUM_ID, USER_ID, REVIEW_ID),
 FOREIGN KEY (FORUM_ID) REFERENCES FORUM(FORUM_ID),
 FOREIGN KEY (USER_ID) REFERENCES USER_ACCOUNT(USER_ID),
 FOREIGN KEY (REVIEW_ID) REFERENCES COMMUNITY_REVIEW(REVIEW_ID)
 ON UPDATE NO ACTION
 ON DELETE CASCADE
);
GO
